# Algorithms-3sem

./: CMakeLists.txt  README.md  Task_2_A_2.cpp  Task_2_B.cpp  Task_2_C_1.cpp  Task_2_D_2.cpp  Task_2_E.cpp  Task_3_A.cpp  Task_3_B.cpp  Task_3_C.cpp  Task_A_2.cpp  Task_B.cpp  Task_C.cpp  Task_D.cpp  Task_E.cpp  Task_F.cpp
