cmake_minimum_required(VERSION 3.17)
project(Algorithms_3sem)

set(CMAKE_CXX_STANDARD 17)

add_executable(Task_A_2 Task_A_2.cpp)
add_executable(Task_B Task_B.cpp)
add_executable(Task_C Task_C.cpp)
add_executable(Task_D Task_D.cpp)
add_executable(Task_E Task_E.cpp)
add_executable(Task_F Task_F.cpp)
add_executable(Task_2_A_2 Task_2_A_2.cpp)
add_executable(Task_2_B Task_2_B.cpp)
add_executable(Task_2_C_1 Task_2_C_1.cpp)
add_executable(Task_2_D_2 Task_2_D_2.cpp)
add_executable(Task_2_E Task_2_E.cpp)
add_executable(Task_3_B Task_3_B.cpp)
add_executable(Task_3_C Task_3_C.cpp)
add_executable(Task_3_A Task_3_A.cpp)
